--- a/app/src/main/res/layout/activity_gsd_view_pager.xml
+++ b/app/src/main/res/layout/activity_gsd_view_pager.xml
@@ -16,9 +16,10 @@
 
     <android.support.v7.widget.Toolbar
       android:id="@+id/toolbar"
-      app:layout_scrollFlags="scroll|enterAlways"
-      app:navigationIcon="@drawable/ic_arrow_back"
-      style="@style/AppTheme.AppBarOverlay" />
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+      app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+      app:navigationIcon="@drawable/ic_arrow_back" />
 
     <android.support.design.widget.TabLayout
       android:id="@+id/tab_layout"
