--- a/app/src/main/res/layout/activity_coordinator_material_design.xml
+++ b/app/src/main/res/layout/activity_coordinator_material_design.xml
@@ -23,13 +23,24 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="@dimen/image_width"
+                android:layout_height="@dimen/image_width"
+                android:layout_gravity="center"
+                android:src="@mipmap/ic_launcher"
+                app:layout_behavior="com.tellh.materialdesignlibrarydemo.coordinatorLayout.MyAvatarBehavior"
+                />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:navigationIcon="@drawable/ic_arrow_back"
-                app:title="@string/app_name" />
+                app:title="@string/app_name">
+                <Space
+                    android:layout_width="@dimen/image_final_width"
+                    android:layout_height="@dimen/image_final_width" />
+                </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -46,6 +57,7 @@
             android:orientation="vertical">
 
             <android.support.v7.widget.CardView
+                android:id="@+id/card_view_header"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -60,6 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/app_name"
+                    android:textStyle="bold"
                     android:textSize="20sp" />
             </android.support.v7.widget.CardView>
 
@@ -81,6 +94,7 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
         android:layout_marginRight="@dimen/fab_margin"
+        app:layout_behavior=".QuickReturnBehavior"
         android:src="@drawable/ic_star_white_24dp"
         app:backgroundTint="@color/blue" />
 </android.support.design.widget.CoordinatorLayout>
