--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="AvatarImageBehavior">
-        <attr name="finalYPosition" format="dimension"/>
-        <attr name="startXPosition" format="dimension"/>
-        <attr name="startToolbarPosition" format="dimension"/>
-        <attr name="startHeight" format="dimension"/>
-        <attr name="finalHeight" format="dimension"/>
+        <attr name="finalYPosition" format="dimension" />
+        <attr name="startXPosition" format="dimension" />
+        <attr name="startToolbarPosition" format="dimension" />
+        <attr name="startHeight" format="dimension" />
+        <attr name="finalHeight" format="dimension" />
+    </declare-styleable>
+    <declare-styleable name="QuickReturnBottomBehavior">
+        <attr name="quick_return_style" format="enum">
+            <enum name="translate" value="0"/>
+            <enum name="scale" value="1"/>
+            <enum name="translate_offset" value="2"/>
+            <enum name="scale_offset" value="3"/>
+        </attr>
     </declare-styleable>
 </resources>
