--- a/app/src/main/res/layout/activity_coordinator_material_design.xml
+++ b/app/src/main/res/layout/activity_coordinator_material_design.xml
@@ -23,13 +23,13 @@
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.7" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="@dimen/image_width"
-                android:layout_height="@dimen/image_width"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher"
-                app:layout_behavior="com.tellh.materialdesignlibrarydemo.coordinatorLayout.MyAvatarBehavior"
-                />
+            <!--<de.hdodenhof.circleimageview.CircleImageView-->
+                <!--android:layout_width="@dimen/image_width"-->
+                <!--android:layout_height="@dimen/image_width"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:src="@mipmap/ic_launcher"-->
+                <!--app:layout_behavior="com.tellh.materialdesignlibrarydemo.coordinatorLayout.MyAvatarBehavior"-->
+                <!--/>-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -86,6 +86,19 @@
                 android:textSize="18sp" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+    <!--android:background="@android:color/transparent" 透明色-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:gravity="center_vertical"
+        android:layout_gravity="top"
+        app:layout_behavior=".QuickReturnTopBehavior"
+        app:quick_return_top_style="offset"
+        android:paddingLeft="15dp"
+        android:textSize="18sp"
+        android:text="Topbar"
+        android:textColor="@android:color/white"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
