--- a/app/src/main/res/layout/activity_coordinator_material_design.xml
+++ b/app/src/main/res/layout/activity_coordinator_material_design.xml
@@ -86,6 +86,19 @@
                 android:textSize="18sp" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
+    <!--android:background="@android:color/transparent" 透明色-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@android:color/transparent"
+        android:gravity="center_vertical"
+        android:layout_gravity="top"
+        app:layout_behavior=".QuickReturnTopBehavior"
+        app:quick_return_style="translate_offset"
+        android:paddingLeft="15dp"
+        android:textSize="18sp"
+        android:text="Topbar"
+        android:textColor="@android:color/white"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
