--- a/app/src/main/res/layout/activity_coordinator_material_design.xml
+++ b/app/src/main/res/layout/activity_coordinator_material_design.xml
@@ -94,7 +94,7 @@
         android:layout_marginTop="50dp"
         android:gravity="center"
         android:layout_gravity="top"
-        app:layout_behavior=".QuickReturnTopBehavior"
+        app:layout_behavior="com.tellh.materialdesignlibrarydemo.coordinatorLayout.Behavior.QuickReturnTopBehavior"
         app:quick_return_style="translate_offset"
         android:paddingLeft="15dp"
         android:textSize="18sp"
@@ -106,7 +106,7 @@
         android:background="@color/colorPrimary"
         android:gravity="center_vertical"
         android:layout_gravity="bottom"
-        app:layout_behavior=".QuickReturnBottomBehavior"
+        app:layout_behavior="com.tellh.materialdesignlibrarydemo.coordinatorLayout.Behavior.QuickReturnBottomBehavior"
         android:paddingLeft="15dp"
         android:textSize="18sp"
         android:hint="添加评论"
@@ -119,7 +119,7 @@
         android:layout_gravity="right|bottom"
         android:layout_marginBottom="45dp"
         android:layout_marginRight="@dimen/fab_margin"
-        app:layout_behavior=".QuickReturnBottomBehavior"
+        app:layout_behavior="com.tellh.materialdesignlibrarydemo.coordinatorLayout.Behavior.QuickReturnBottomBehavior"
         app:quick_return_style="scale_offset"
         android:src="@drawable/ic_star_white_24dp"
         app:backgroundTint="@color/blue" />
