--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,4 +6,19 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="AppTheme.SearchView" parent="Widget.AppCompat.SearchView">
+        <!--<item name="searchIcon">@drawable/ic_done_all_black_24dp</item>-->
+        <!--<item name="closeIcon">@drawable/ic_done_all_black_24dp</item>-->
+        <item name="android:commitIcon">@drawable/ic_done_all_black_24dp</item>
+    </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">#3498db</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:searchViewStyle">@style/AppTheme.SearchView</item>
+        <!--<item name="colorAccent">@color/colorAccent</item>-->
+    </style>
 </resources>
