--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,8 +12,8 @@
         <!--<item name="closeIcon">@drawable/ic_done_all_black_24dp</item>-->
         <item name="android:commitIcon">@drawable/ic_done_all_black_24dp</item>
     </style>
-
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- 使用夜间模式时，主题的parent 为 Theme.AppCompat.DayNight -->
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorAccent">#3498db</item>
